--- a/SignalsAndRxJs/src/components/product-list/product-list.component.html
+++ b/SignalsAndRxJs/src/components/product-list/product-list.component.html
@@ -1,25 +1,34 @@
 <div class="card">
   <div class="card-header">
-   <input #searchInput type="text" placeholder="Search products..." (input)="onSearch(searchInput?.value)" />
+    <mat-form-field class="example-full-width">
+      <mat-label>Search products</mat-label>
+      <input
+        matInput
+        type="text"
+        [(ngModel)]="searchPattern"
+        (ngModelChange)="onSearch(searchPattern)"
+      />
+    </mat-form-field>
   </div>
 
   <div class="product-list__container">
     <div class="product-list__list-wrapper">
       @for (product of products$ | async; track product.id) {
-      <div [class.product-list__product--selected]="product.id === selectedProduct?.id"
-           class="product-list__product"
-           (click)="onSelectProduct(product)">
-        {{ product.name }} - {{ product.price | currency }}
+      <div
+        [class.product-list__product--selected]="product.id === (selectedProduct$ | async)?.id"
+        class="product-list__product"
+        (click)="onSelectProduct(product)"
+      >
+        {{ product.name }}
       </div>
-      }
-      @empty {
+      } @empty {
       <div>No products available.</div>
       }
     </div>
 
-    @if (selectedProduct != null) {
+    @if ((selectedProduct$ | async) != null) {
     <div class="product-list__selected-product-details">
-     <product-component></product-component>
+      <product-component></product-component>
     </div>
     }
   </div>
@@ -42,3 +51,4 @@
     {{ errorMessage }}
   </div>
 </div> -->
+</div>
