--- a/SignalsAndRxJs/src/app/app.html
+++ b/SignalsAndRxJs/src/app/app.html
@@ -8,6 +8,7 @@
     [active]="rla.isActive"
     [routerLinkActiveOptions]="{ exact: true }"
   >
+    <mat-icon>{{ link.icon }}</mat-icon>
     {{ link.label }}
   </a>
   }
