--- a/SignalsAndRxJs/src/components/product-list/product-list.component.html
+++ b/SignalsAndRxJs/src/components/product-list/product-list.component.html
@@ -1,54 +1,36 @@
-<div class="card">
-  <div class="card-header">
-    <mat-form-field class="example-full-width">
+<div class="product-list__container">
+  <div class="product-list__search">
+    <mat-form-field class="product-list__search-input">
       <mat-label>Search products</mat-label>
-      <input
-        matInput
-        type="text"
-        [(ngModel)]="searchPattern"
-        (ngModelChange)="onSearch(searchPattern)"
-      />
+      <div class="product_list__search-pattern-and-icon">
+        <input
+          matInput
+          type="text"
+          [(ngModel)]="searchPattern"
+          (ngModelChange)="onSearch(searchPattern)"
+        />
+       
+      </div>
     </mat-form-field>
   </div>
 
-  <div class="product-list__container">
-    <div class="product-list__list-wrapper">
-      @for (product of products$ | async; track product.id) {
-      <div
-        [class.product-list__product--selected]="product.id === (selectedProduct$ | async)?.id"
-        class="product-list__product"
-        (click)="onSelectProduct(product)"
-      >
-        {{ product.name }}
-      </div>
+  <div class="product-list__list-and-details">
+    <mat-card class="product-list__list-wrapper">
+      @for (product of products(); track product.id) {
+      <mat-card-header [class.product-list__product--selected]="product.id === (selectedProduct$ | async)?.id">
+        <mat-card-title 
+        class="product-list__product-item"
+        (click)="onSelectProduct(product)">{{ product.name }}</mat-card-title>
+      </mat-card-header>
+     
+
       } @empty {
       <div>No products available.</div>
       }
-    </div>
+    </mat-card>
 
     @if ((selectedProduct$ | async) != null) {
-    <div class="product-list__selected-product-details">
-      <product-component></product-component>
-    </div>
+    <product-component class="product-list__selected-product-details"></product-component>
     }
   </div>
-
-  <!-- <div class="card-body" *ngIf="vehicles()">
-    <div class="list-group">
-      <button
-        type="button"
-        class="list-group-item"
-        *ngFor="let vehicle of vehicles()"
-        [ngClass]="{ active: vehicle.name === selectedVehicle()?.name }"
-        (click)="onSelected(vehicle.name)"
-      >
-        {{ vehicle.name }}
-      </button>
-    </div>
-  </div>
-
-  <div class="alert alert-danger" *ngIf="errorMessage">
-    {{ errorMessage }}
-  </div>
-</div> -->
 </div>
