--- a/SignalsAndRxJs/src/components/product/product.component.scss
+++ b/SignalsAndRxJs/src/components/product/product.component.scss
@@ -6,7 +6,7 @@
         }
 
         &__header {
-            width: 100%;
+            //width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -16,6 +16,10 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+        }
+
+        &__button {
+            justify-content: end;
         }
     }
 }
