--- a/SignalsAndRxJs/src/components/cart/cart.component.scss
+++ b/SignalsAndRxJs/src/components/cart/cart.component.scss
@@ -1,26 +1,5 @@
 :host {
-  display: flex;
-  height: 100%;
-  width: 100%;
-  flex-direction: column;
-  justify-content: center;
-
   .cart {
-    &__continue-shopping-label {
-      cursor: pointer;
-      font-size: 14px;
-      display: flex;
-      width: 100%;
-      flex-direction: row;
-      justify-content: end;
-      padding-bottom: 20px;
-    }
-    &__header {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
     &__container {
       display: flex;
       height: 100%;
@@ -30,8 +9,24 @@
       justify-content: center;
     }
 
-    &__total {
-      padding-top: 10px;
+    &__continue-shopping-label {
+      cursor: pointer;
+      font-size: 14px;
+      display: flex;
+      width: 100%;
+      flex-direction: row;
+      justify-content: end;
+      padding-bottom: 20px;
+
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+
+    &__header {
+      width: 100%;
+      display: flex;
+      align-items: center;
     }
 
     &__details-wrapper {
@@ -54,10 +49,7 @@
       border-bottom: 1px solid gray;
       height: 30px;
       display: flex;
-      width: 100%;
-      flex-direction: row;
       justify-content: space-between;
-      align-items: center;
 
       & > mat-icon:hover {
         cursor: pointer;
@@ -67,22 +59,13 @@
       &-name {
         width: 45%;
         display: flex;
-        flex-direction: row;
         align-items: center;
         justify-content: center;
       }
-
-      &-quantity {
-        border: 1px solid red;
-        height: min-content;
-      }
     }
-  }
 
-  .buttons__wrapper {
-    display: flex;
-    gap: 10px;
-    flex-direction: row;
-    justify-content: space-between;
+    &__total {
+      padding-top: 10px;
+    }
   }
 }
