--- a/SignalsAndRxJs/src/components/product-list/product-list.component.html
+++ b/SignalsAndRxJs/src/components/product-list/product-list.component.html
@@ -2,18 +2,24 @@
   <div class="product-list__search">
     <mat-form-field class="product-list__search-input">
       <mat-label>Search products</mat-label>
-      <div class="product_list__search-pattern-and-icon">
-        <input matInput type="text" [value]="searchPattern()" (input)="pattern$.next($event.target.value)" />
-      </div>
+      <input
+        matInput
+        type="text"
+        [value]="searchPattern()"
+        (input)="pattern$.next($event.target.value)"
+      />
     </mat-form-field>
   </div>
 
   <div class="product-list__list-and-details">
     <mat-card class="product-list__list-wrapper">
       @for (product of products(); track product.id) {
-      <mat-card-header [class.product-list__product--selected]="product.id === (selectedProduct())?.id">
-        <mat-card-title class="product-list__product-item" (click)="onSelectProduct(product)">{{ product.name
-          }}</mat-card-title>
+      <mat-card-header
+        [class.product-list__product--selected]="product.id === selectedProduct()?.id"
+      >
+        <mat-card-title class="product-list__product-item" (click)="onSelectProduct(product)">{{
+          product.name
+        }}</mat-card-title>
       </mat-card-header>
       } @empty {
       <div>No products available.</div>
